# ip-location-service

./: .gitignore  CMakeLists.txt  Dockerfile.data-updater  README.md  docker-compose.yml  main.cpp  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
api/: CMakeLists.txt  Dockerfile  run_tests.sh
api/src/: main.cpp
api/src/config/: service_config.cpp  service_config.h
api/src/database/: database_pool.cpp  database_pool.h
api/src/handlers/: api_handlers.cpp  api_handlers.h
api/src/utils/: ip_validator.cpp  ip_validator.h  logger.cpp  logger.h  rate_limiter.cpp  rate_limiter.h
api/tests/: CMakeLists.txt  test_api_handlers.cpp  test_ip_validator.cpp  test_logger.cpp  test_rate_limiter.cpp
data-updater/: Dockerfile
data-updater/scripts/: update_data.py
db_init/: init.sql
scripts/: update_data.py
